Update augmentation parameters in jupyter notebook

--- a/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook.ipynb
+++ b/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook.ipynb
@@ -94,23 +94,23 @@
     "workers = 2\n",
     "cache = False\n",
     "pretrained = True\n",
-    "hsv_h = 0.015\n",
+    "hsv_h = 0.02\n",
     "hsv_s = 0.3\n",
     "hsv_v = 0.3\n",
-    "translate = 0.0\n",
-    "scale = 0.0\n",
-    "fliplr = 0.5\n",
-    "flipud = 0.5\n",
-    "mosaic = 0.1\n",
-    "copy_paste = 0.0\n",
-    "erasing = 0.0\n",
-    "fraction = 0.1\n",
-    "degrees = 180\n",
+    "translate = 0.1\n",
+    "scale = 0.1\n",
+    "fliplr = 0.3\n",
+    "flipud = 0.0\n",
+    "mosaic = 1.0\n",
+    "copy_paste = 0.1\n",
+    "erasing = 0.1\n",
+    "fraction = 0.2\n",
+    "degrees = 25\n",
     "##################################################################################\n",
     "######################### CUSTOM AUGMENTATION PARAMETERS #########################\n",
     "colorAugmentProb = 0.5\n",
     "noiseAugmentProb = 0.5\n",
-    "resolutionAugmentProb = 0.0\n",
+    "resolutionAugmentProb = 0.0\n".
     "contrastAugmentProb = 0.5\n",
     "blurAugmentProb = 0.5\n",
     "brightnessAugmentProb = 0.5\n",
