fix update to jupyter notebook augmentation parameters

--- a/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook.ipynb
+++ b/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook.ipynb
@@ -110,7 +110,7 @@
     "######################### CUSTOM AUGMENTATION PARAMETERS #########################\n",
     "colorAugmentProb = 0.5\n",
     "noiseAugmentProb = 0.5\n",
-    "resolutionAugmentProb = 0.0\n".
+    "resolutionAugmentProb = 0.0\n",
     "contrastAugmentProb = 0.5\n",
     "blurAugmentProb = 0.5\n",
     "brightnessAugmentProb = 0.5\n",
