update YOLO trainig notebooks

--- a/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook_Linux.ipynb
+++ b/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook_Linux.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1015,11 +1015,139 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2998388465.py, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 22\u001b[0;36m\u001b[0m\n\u001b[0;31m    hsv_h=hsv_h,\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics 8.3.226 🚀 Python-3.8.20 torch-2.4.1+cu121 CUDA:0 (NVIDIA GeForce RTX 4060 Laptop GPU, 7806MiB)\n",
+      "\u001b[34m\u001b[1mengine/trainer: \u001b[0magnostic_nms=False, amp=True, augment=False, auto_augment=randaugment, batch=16, bgr=0.0, box=7.5, cache=True, cfg=None, classes=None, close_mosaic=10, cls=0.5, compile=False, conf=None, copy_paste=0.1, copy_paste_mode=flip, cos_lr=False, cutmix=0.0, data=/home/arthur/AUV-2026/ros2_ws/src/vision/model_pipeline/data.yaml, degrees=25, deterministic=True, device=None, dfl=1.5, dnn=False, dropout=0.0, dynamic=False, embed=None, epochs=200, erasing=0.1, exist_ok=False, fliplr=0.3, flipud=0.0, format=torchscript, fraction=0.2, freeze=None, half=False, hsv_h=0.02, hsv_s=0.3, hsv_v=0.3, imgsz=640, int8=False, iou=0.7, keras=False, kobj=1.0, line_width=None, lr0=0.001, lrf=0.01, mask_ratio=4, max_det=300, mixup=0.0, mode=train, model=yolov8n.pt, momentum=0.937, mosaic=1.0, multi_scale=False, name=yolov8n, nbs=64, nms=False, opset=None, optimize=False, optimizer=AdamW, overlap_mask=True, patience=100, perspective=0.0, plots=True, pose=12.0, pretrained=True, profile=False, project=None, rect=False, resume=False, retina_masks=False, save=True, save_conf=False, save_crop=False, save_dir=/home/arthur/AUV-2026/ros2_ws/src/vision/model_pipeline/runs/detect/yolov8n, save_frames=False, save_json=False, save_period=-1, save_txt=False, scale=0.1, seed=0, shear=0.0, show=False, show_boxes=True, show_conf=True, show_labels=True, simplify=True, single_cls=False, source=None, split=val, stream_buffer=False, task=detect, time=None, tracker=botsort.yaml, translate=0.1, val=True, verbose=True, vid_stride=1, visualize=False, warmup_bias_lr=0.1, warmup_epochs=3.0, warmup_momentum=0.8, weight_decay=0.0005, workers=5, workspace=None\n",
+      "Overriding model.yaml nc=80 with nc=6\n",
+      "\n",
+      "                   from  n    params  module                                       arguments                     \n",
+      "  0                  -1  1       464  ultralytics.nn.modules.conv.Conv             [3, 16, 3, 2]                 \n",
+      "  1                  -1  1      4672  ultralytics.nn.modules.conv.Conv             [16, 32, 3, 2]                \n",
+      "  2                  -1  1      7360  ultralytics.nn.modules.block.C2f             [32, 32, 1, True]             \n",
+      "  3                  -1  1     18560  ultralytics.nn.modules.conv.Conv             [32, 64, 3, 2]                \n",
+      "  4                  -1  2     49664  ultralytics.nn.modules.block.C2f             [64, 64, 2, True]             \n",
+      "  5                  -1  1     73984  ultralytics.nn.modules.conv.Conv             [64, 128, 3, 2]               \n",
+      "  6                  -1  2    197632  ultralytics.nn.modules.block.C2f             [128, 128, 2, True]           \n",
+      "  7                  -1  1    295424  ultralytics.nn.modules.conv.Conv             [128, 256, 3, 2]              \n",
+      "  8                  -1  1    460288  ultralytics.nn.modules.block.C2f             [256, 256, 1, True]           \n",
+      "  9                  -1  1    164608  ultralytics.nn.modules.block.SPPF            [256, 256, 5]                 \n",
+      " 10                  -1  1         0  torch.nn.modules.upsampling.Upsample         [None, 2, 'nearest']          \n",
+      " 11             [-1, 6]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 12                  -1  1    148224  ultralytics.nn.modules.block.C2f             [384, 128, 1]                 \n",
+      " 13                  -1  1         0  torch.nn.modules.upsampling.Upsample         [None, 2, 'nearest']          \n",
+      " 14             [-1, 4]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 15                  -1  1     37248  ultralytics.nn.modules.block.C2f             [192, 64, 1]                  \n",
+      " 16                  -1  1     36992  ultralytics.nn.modules.conv.Conv             [64, 64, 3, 2]                \n",
+      " 17            [-1, 12]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 18                  -1  1    123648  ultralytics.nn.modules.block.C2f             [192, 128, 1]                 \n",
+      " 19                  -1  1    147712  ultralytics.nn.modules.conv.Conv             [128, 128, 3, 2]              \n",
+      " 20             [-1, 9]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 21                  -1  1    493056  ultralytics.nn.modules.block.C2f             [384, 256, 1]                 \n",
+      " 22        [15, 18, 21]  1    752482  ultralytics.nn.modules.head.Detect           [6, [64, 128, 256]]           \n",
+      "Model summary: 129 layers, 3,012,018 parameters, 3,012,002 gradients, 8.2 GFLOPs\n",
+      "\n",
+      "Transferred 319/355 items from pretrained weights\n",
+      "Freezing layer 'model.22.dfl.conv.weight'\n",
+      "\u001b[34m\u001b[1mAMP: \u001b[0mrunning Automatic Mixed Precision (AMP) checks...\n",
+      "\u001b[34m\u001b[1mAMP: \u001b[0mchecks passed ✅\n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 6484.0±1476.5 MB/s, size: 439.4 KB)\n",
+      "\u001b[K\u001b[34m\u001b[1mtrain: \u001b[0mScanning /home/arthur/AUV-2026/ros2_ws/src/vision/model_pipeline/data/augmented/train/labels.cache... 900 images, 50 backgrounds, 0 corrupt: 100% ━━━━━━━━━━━━ 900/900 2.6Mit/s 0.0s0s\n",
+      "WARNING ⚠️ cache='ram' may produce non-deterministic training results. Consider cache='disk' as a deterministic alternative if your disk space allows.\n",
+      "\u001b[K\u001b[34m\u001b[1mtrain: \u001b[0mCaching images (0.6GB RAM): 100% ━━━━━━━━━━━━ 900/900 1.9Kit/s 0.5s0.1ss\n",
+      "\u001b[34m\u001b[1malbumentations: \u001b[0mBlur(p=0.01, blur_limit=(3, 7)), MedianBlur(p=0.01, blur_limit=(3, 7)), ToGray(p=0.01, num_output_channels=3, method='weighted_average'), CLAHE(p=0.01, clip_limit=(1.0, 4.0), tile_grid_size=(8, 8))\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 1835.1±224.3 MB/s, size: 339.2 KB)\n",
+      "\u001b[K\u001b[34m\u001b[1mval: \u001b[0mScanning /home/arthur/AUV-2026/ros2_ws/src/vision/model_pipeline/data/augmented/val/labels.cache... 1286 images, 132 backgrounds, 0 corrupt: 100% ━━━━━━━━━━━━ 1286/1286 2.0Mit/s 0.0s0s\n",
+      "WARNING ⚠️ cache='ram' may produce non-deterministic training results. Consider cache='disk' as a deterministic alternative if your disk space allows.\n",
+      "\u001b[K\u001b[34m\u001b[1mval: \u001b[0mCaching images (0.8GB RAM): 100% ━━━━━━━━━━━━ 1286/1286 1.6Kit/s 0.8s0.1s\n",
+      "Plotting labels to /home/arthur/AUV-2026/ros2_ws/src/vision/model_pipeline/runs/detect/yolov8n/labels.jpg... \n",
+      "\u001b[34m\u001b[1moptimizer:\u001b[0m AdamW(lr=0.001, momentum=0.937) with parameter groups 57 weight(decay=0.0), 64 weight(decay=0.0005), 63 bias(decay=0.0)\n",
+      "Image sizes 640 train, 640 val\n",
+      "Using 5 dataloader workers\n",
+      "Logging results to \u001b[1m/home/arthur/AUV-2026/ros2_ws/src/vision/model_pipeline/runs/detect/yolov8n\u001b[0m\n",
+      "Starting training for 200 epochs...\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      1/200      3.72G      1.976      3.434      1.811         31        640: 100% ━━━━━━━━━━━━ 57/57 9.4it/s 6.0s<0.1s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 15.6it/s 2.6s0.1s\n",
+      "                   all       1286       3562     0.0417       0.32      0.075     0.0241\n",
+      "End of epoch 1\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      2/200      3.72G      1.617      2.068      1.553         18        640: 100% ━━━━━━━━━━━━ 57/57 10.1it/s 5.6s0.1s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 15.1it/s 2.7s0.1s\n",
+      "                   all       1286       3562      0.435      0.403      0.314      0.142\n",
+      "End of epoch 2\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      3/200      3.72G      1.451      1.554      1.443         23        640: 100% ━━━━━━━━━━━━ 57/57 9.8it/s 5.8s<0.2s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 15.3it/s 2.7s0.1s\n",
+      "                   all       1286       3562      0.638      0.414       0.47      0.251\n",
+      "End of epoch 3\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      4/200      3.72G      1.313      1.324      1.352         34        640: 100% ━━━━━━━━━━━━ 57/57 10.0it/s 5.7s0.1s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 15.5it/s 2.6s0.1s\n",
+      "                   all       1286       3562      0.599      0.475      0.504      0.244\n",
+      "End of epoch 4\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      5/200      3.72G      1.232      1.178      1.284         18        640: 100% ━━━━━━━━━━━━ 57/57 10.0it/s 5.7s.2ss\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 14.6it/s 2.8s0.1s\n",
+      "                   all       1286       3562      0.674      0.513      0.571      0.297\n",
+      "End of epoch 5\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      6/200      3.72G      1.152      1.054      1.218         22        640: 100% ━━━━━━━━━━━━ 57/57 10.0it/s 5.7s0.1s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 15.1it/s 2.7s0.1s\n",
+      "                   all       1286       3562      0.727      0.561      0.628      0.332\n",
+      "End of epoch 6\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      7/200      3.72G      1.128     0.9942      1.208         19        640: 100% ━━━━━━━━━━━━ 57/57 10.3it/s 5.5s0.2s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 16.4it/s 2.5s0.1s\n",
+      "                   all       1286       3562      0.733       0.53      0.637      0.368\n",
+      "End of epoch 7\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      8/200      3.72G      1.053     0.9031      1.169         22        640: 100% ━━━━━━━━━━━━ 57/57 10.4it/s 5.5s0.1s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 16.2it/s 2.5s0.1s\n",
+      "                   all       1286       3562      0.748      0.591      0.663      0.383\n",
+      "End of epoch 8\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K      9/200      3.72G      1.061     0.8832      1.171         24        640: 100% ━━━━━━━━━━━━ 57/57 10.3it/s 5.5s0.2s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 16.3it/s 2.5s0.1s\n",
+      "                   all       1286       3562      0.745       0.61      0.686      0.397\n",
+      "End of epoch 9\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K     10/200      3.72G      1.029     0.8507      1.144         13        640: 100% ━━━━━━━━━━━━ 57/57 10.3it/s 5.5s0.1s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 16.1it/s 2.6s0.1s\n",
+      "                   all       1286       3562      0.716      0.617      0.676       0.39\n",
+      "End of epoch 10\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K     11/200      3.72G     0.9711     0.7845      1.122         21        640: 100% ━━━━━━━━━━━━ 57/57 10.3it/s 5.5s0.2s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 16.3it/s 2.5s0.1s\n",
+      "                   all       1286       3562      0.753      0.604       0.69      0.378\n",
+      "End of epoch 11\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K     12/200      3.72G     0.9444     0.7773      1.113         20        640: 100% ━━━━━━━━━━━━ 57/57 10.3it/s 5.5s0.1s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 16.4it/s 2.5s0.1s\n",
+      "                   all       1286       3562       0.79      0.623      0.716      0.442\n",
+      "End of epoch 12\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K     13/200      3.72G     0.9397     0.7635      1.109         19        640: 100% ━━━━━━━━━━━━ 57/57 10.3it/s 5.5s0.2s\n",
+      "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 41/41 16.3it/s 2.5s0.1s\n",
+      "                   all       1286       3562      0.823      0.655      0.748      0.465\n",
+      "End of epoch 13\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "\u001b[K     14/200      3.72G     0.9318     0.7432      1.102         93        640: 67% ━━━━━━━━──── 38/57 10.2it/s 3.8s<1.9s"
      ]
     }
    ],
