add changes so I can actually push

--- a/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook.ipynb
+++ b/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook.ipynb
@@ -81,7 +81,9 @@
     "# {\"gate\": 505, \"octagon_table\": 575, \"octagon_top\": 502, \"path_marker\": 693, \"sawfish\": 171, \"shark\": 168}\n",
     "target_classes = [\"gate\", \"octagon_table\", \"octagon_top\", \"path_marker\", \"sawfish\", \"shark\"]\n",
     "model_save_filename = \"best_AUV_sim_model.pt\"\n",
-    "model_name = \"yolov8n.pt\"\n",
+    "model_name = \"yolov8n\"\n",
+    "model_name_pytorch_file=model_name + \".pt\"\n",
+    "\n",
     "train_test_val_split = (0.7, 0.2, 0.1)\n",
     "epoch_increments = 200\n",
     "# This is likely what cause the Jetson Nano to crash\n",
@@ -92,7 +94,7 @@
     "batch_size = 1\n",
     "# TODO: Consider plotting speedup against number of processors/threads to test how many data loading threads are optimal for nano\n",
     "workers = 2\n",
-    "cache = False\n",
+    "cache = False # uses too much memory\n",
     "pretrained = True\n",
     "hsv_h = 0.02\n",
     "hsv_s = 0.3\n",
@@ -106,6 +108,9 @@
     "erasing = 0.1\n",
     "fraction = 0.2\n",
     "degrees = 25\n",
+    "\n",
+    "optimizer = \"AdamW\"\n",
+    "learning_rate = 0.001 # set this to 0.01 or 0.005 for SGD\n",
     "##################################################################################\n",
     "######################### CUSTOM AUGMENTATION PARAMETERS #########################\n",
     "colorAugmentProb = 0.5\n",
@@ -554,6 +559,62 @@
     "\n",
     "    return np.array(img_filenames), np.array(label_filenames)\n",
     "\n",
+    "def split_images_left_right(source_dir, dest_dir):\n",
+    "    datasets = [f\"{source_dir}\"]\n",
+    "\n",
+    "    os.makedirs(dest_dir, exist_ok=True)\n",
+    "    \n",
+    "    left_data_path = f\"{dest_dir}/left\"\n",
+    "    right_data_path = f\"{dest_dir}/right\"\n",
+    "    os.makedirs(f\"{left_data_path}/images\", exist_ok=True)\n",
+    "    os.makedirs(f\"{left_data_path}/labels\", exist_ok=True)\n",
+    "    os.makedirs(f\"{right_data_path}/images\", exist_ok=True)\n",
+    "    os.makedirs(f\"{right_data_path}/labels\", exist_ok=True)\n",
+    "    \n",
+    "    for dataset in datasets: # make it easy to adapt if we have train/valid/test situation\n",
+    "        for image_name in os.listdir(f\"{dataset}/images\"):\n",
+    "            image_name_no_extension = image_name[:-4] # discard .jpg or .png\n",
+    "            image_path = f\"{dataset}/images/{image_name}\"\n",
+    "            image = cv2.imread(image_path)\n",
+    "            height, width, channels = image.shape\n",
+    "            width_cutoff = width // 2\n",
+    "            left_image = image[:, :(width_cutoff)]\n",
+    "            right_image = image[:, (width_cutoff):]\n",
+    "    \n",
+    "            cv2.imwrite(f\"{left_data_path}/images/{image_name_no_extension}.jpg\",left_image)\n",
+    "            cv2.imwrite(f\"{right_data_path}/images/{image_name_no_extension}.jpg\", right_image)\n",
+    "        for label_name in os.listdir(f\"{dataset}/labels\"):\n",
+    "            label_name_no_extension = label_name[:-4] # discard .txt\n",
+    "            label_path = f\"{dataset}/labels/{label_name}\"\n",
+    "            \n",
+    "            left_path = f\"{left_data_path}/labels/{label_name_no_extension}\"\n",
+    "            right_path = f\"{right_data_path}/labels/{label_name_no_extension}\"\n",
+    "            with open(label_path, 'r') as label_file, open(f\"{left_path}.txt\", 'w') as left_output_file, open(f\"{right_path}.txt\", 'w') as right_output_file:\n",
+    "                for line in label_file:\n",
+    "                    bounding_box = line.strip().split(\" \")\n",
+    "                    if (float(bounding_box[1]) < 0.5): # second parameter is x-center\n",
+    "                        x_center = 2 * float(bounding_box[1])\n",
+    "                        label_width = 2 * float(bounding_box[3]) # third parameter is width\n",
+    "                        if (x_center + label_width / 2 > 1.0):\n",
+    "                            label_width = 2 * (1.0 - x_center)\n",
+    "                        if (x_center - label_width / 2 < 0.0):\n",
+    "                            label_width = 2 * x_center\n",
+    "                        bounding_box[1] = str(x_center)\n",
+    "                        bounding_box[3] = str(label_width)\n",
+    "                        new_bb_string = \" \".join(bounding_box)\n",
+    "                        left_output_file.write(new_bb_string + \"\\n\")\n",
+    "                    else:\n",
+    "                        x_center = 2 * float(bounding_box[1]) - 1\n",
+    "                        label_width = 2 * float(bounding_box[3])\n",
+    "                        if (x_center + label_width / 2 > 1.0):\n",
+    "                            label_width = 2 * (1.0 - x_center)\n",
+    "                        if (x_center - label_width / 2 < 0.0):\n",
+    "                            label_width = 2 * x_center\n",
+    "                        bounding_box[1] = str(x_center)\n",
+    "                        bounding_box[3] = str(label_width)\n",
+    "                        new_bb_string = \" \".join(bounding_box)\n",
+    "                        right_output_file.write(new_bb_string + \"\\n\")\n",
+    "\n",
     "def split_and_move_data(source_dir, dest_dir, split_ratio=(0.7, 0.2, 0.1)):\n",
     "    source_image_dir = f\"{source_dir}{os_path}images\"\n",
     "    source_label_dir = f\"{source_dir}{os_path}labels\"\n",
@@ -789,14 +850,17 @@
    "source": [
     "%%capture\n",
     "out_folder = f\"data{os_path}augmented\"\n",
+    "split_folder = f\"data{os_path}split_raw\"\n",
+    "left_camera_folder = f\"{split_folder}{os_path}left\"\n",
     "in_folder = f\"data{os_path}raw\"\n",
     "train = f\"{os_path}train\"\n",
     "val = f\"{os_path}val\"\n",
     "test = f\"{os_path}test\"\n",
     "\n",
-    "raw_image_names, raw_label_names = get_file_names(in_folder)\n",
+    "#split_images_left_right(in_folder, split_folder)\n",
+    "raw_image_names, raw_label_names = get_file_names(left_camera_folder)\n",
     "num_raw_samples = len(raw_image_names)\n",
-    "do_augs_and_export(raw_image_names, raw_label_names, in_folder, out_folder)\n",
+    "do_augs_and_export(raw_image_names, raw_label_names, left_camera_folder, out_folder)\n",
     "split_and_move_data(out_folder, out_folder)\n",
     "\n",
     "os.rmdir(f\"data{os_path}augmented{os_path}images\")\n",
@@ -1060,7 +1124,7 @@
    "source": [
     "data_yaml_file_absolute_path = os.path.abspath(\"data.yaml\")\n",
     "\n",
-    "model = YOLO(model_name) # load a pretrained model.\n",
+    "model = YOLO(model_name_pytorch_file) # load a pretrained model.\n",
     "\n",
     "# register fit callback\n",
     "model.add_callback(\"on_fit_epoch_end\", on_fit_epoch_end)\n",
@@ -1069,6 +1133,7 @@
     "while True:\n",
     "    try:\n",
     "        model.train(\n",
+    "            name=model_name,\n",
     "            data=data_yaml_file_absolute_path,\n",
     "            epochs=epoch_increments,\n",
     "            batch=batch_size,\n",
@@ -1076,6 +1141,8 @@
     "            task=\"detect\",\n",
     "            cache=cache,\n",
     "            workers=workers,\n",
+    "            optimizer=optimizer,\n",
+    "            lr0=learning_rate,\n",
     "            hsv_h=hsv_h,\n",
     "            hsv_s=hsv_s,\n",
     "            hsv_v=hsv_v,\n",
@@ -1234,9 +1301,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:yolo]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-yolo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1248,7 +1315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
