final training run, yolo11s

--- a/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook_Linux.ipynb
+++ b/ros2_ws/src/vision/model_pipeline/YOLO_AUV_Training_Notebook_Linux.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 15,
@@ -106,7 +106,7 @@
     "mosaic = 0.4\n",
     "copy_paste = 0.1\n",
     "erasing = 0.1\n",
-    "fraction = 0.2\n",
+    "fraction = 1.0 # 0.2 # this reduces dataset size??? why is it 0.2 by default??\n",
     "shear=0.0 # 5.0 # rotate the image weirdly\n",
     "perspective=0.0 # change perspective by tiling the image\n",
     "mixup=0.0 #0.12 # blends two images together\n",
